mentor feedback fixes